build/log/idf_py_stdout_output_20149
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/gen/Projects/rover/build/bootloader/esp-idf/esptool_py && /home/gen/.espressif/python_env/idf5.5_py3.13_env/bin/python /home/gen/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/gen/Projects/rover/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/gen/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/gen/Projects/rover/build/config -I/home/gen/Projects/rover/main -I/home/gen/esp/esp-idf/components/newlib/platform_include -I/home/gen/esp/esp-idf/components/freertos/config/include -I/home/gen/esp/esp-idf/components/freertos/config/include/freertos -I/home/gen/esp/esp-idf/components/freertos/config/xtensa/include -I/home/gen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/gen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/gen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/gen/esp/esp-idf/components/freertos/esp_additions/include -I/home/gen/esp/esp-idf/components/esp_hw_support/include -I/home/gen/esp/esp-idf/components/esp_hw_support/include/soc -I/home/gen/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/gen/esp/esp-idf/components/esp_hw_support/dma/include -I/home/gen/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/gen/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/gen/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/gen/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/gen/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/gen/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/gen/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/gen/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/gen/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/gen/esp/esp-idf/components/heap/include -I/home/gen/esp/esp-idf/components/heap/tlsf -I/home/gen/esp/esp-idf/components/log/include -I/home/gen/esp/esp-idf/components/soc/include -I/home/gen/esp/esp-idf/components/soc/esp32s3 -I/home/gen/esp/esp-idf/components/soc/esp32s3/include -I/home/gen/esp/esp-idf/components/soc/esp32s3/register -I/home/gen/esp/esp-idf/components/hal/platform_port/include -I/home/gen/esp/esp-idf/components/hal/esp32s3/include -I/home/gen/esp/esp-idf/components/hal/include -I/home/gen/esp/esp-idf/components/esp_rom/include -I/home/gen/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/gen/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/gen/esp/esp-idf/components/esp_rom/esp32s3 -I/home/gen/esp/esp-idf/components/esp_common/include -I/home/gen/esp/esp-idf/components/esp_system/include -I/home/gen/esp/esp-idf/components/esp_system/port/soc -I/home/gen/esp/esp-idf/components/esp_system/port/include/private -I/home/gen/esp/esp-idf/components/xtensa/esp32s3/include -I/home/gen/esp/esp-idf/components/xtensa/include -I/home/gen/esp/esp-idf/components/xtensa/deprecated_include -I/home/gen/esp/esp-idf/components/lwip/include -I/home/gen/esp/esp-idf/components/lwip/include/apps -I/home/gen/esp/esp-idf/components/lwip/include/apps/sntp -I/home/gen/esp/esp-idf/components/lwip/lwip/src/include -I/home/gen/esp/esp-idf/components/lwip/port/include -I/home/gen/esp/esp-idf/components/lwip/port/freertos/include -I/home/gen/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/gen/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/gen/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/gen/esp/esp-idf/components/esp_http_server/include -I/home/gen/esp/esp-idf/components/http_parser -I/home/gen/esp/esp-idf/components/esp_event/include -I/home/gen/esp/esp-idf/components/esp_timer/include -I/home/gen/esp/esp-idf/components/esp_netif/include -I/home/gen/esp/esp-idf/components/nvs_flash/include -I/home/gen/esp/esp-idf/components/esp_partition/include -I/home/gen/esp/esp-idf/components/wifi_provisioning/include -I/home/gen/esp/esp-idf/components/protocomm/include/common -I/home/gen/esp/esp-idf/components/protocomm/include/security -I/home/gen/esp/esp-idf/components/protocomm/include/transports -I/home/gen/esp/esp-idf/components/protocomm/include/crypto/srp6a -I/home/gen/esp/esp-idf/components/protocomm/proto-c -I/home/gen/esp/esp-idf/components/esp_wifi/include -I/home/gen/esp/esp-idf/components/esp_wifi/include/local -I/home/gen/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/gen/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/gen/esp/esp-idf/components/esp_phy/include -I/home/gen/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/gen/Projects/rover/managed_components/espressif__esp32-camera/driver/include -I/home/gen/Projects/rover/managed_components/espressif__esp32-camera/conversions/include -I/home/gen/esp/esp-idf/components/driver/deprecated -I/home/gen/esp/esp-idf/components/driver/i2c/include -I/home/gen/esp/esp-idf/components/driver/touch_sensor/include -I/home/gen/esp/esp-idf/components/driver/twai/include -I/home/gen/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/gen/esp/esp-idf/components/esp_pm/include -I/home/gen/esp/esp-idf/components/esp_ringbuf/include -I/home/gen/esp/esp-idf/components/esp_driver_gpio/include -I/home/gen/esp/esp-idf/components/esp_driver_pcnt/include -I/home/gen/esp/esp-idf/components/esp_driver_gptimer/include -I/home/gen/esp/esp-idf/components/esp_driver_spi/include -I/home/gen/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/gen/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/gen/esp/esp-idf/components/esp_driver_i2s/include -I/home/gen/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/gen/esp/esp-idf/components/sdmmc/include -I/home/gen/esp/esp-idf/components/esp_driver_sdspi/include -I/home/gen/esp/esp-idf/components/esp_driver_sdio/include -I/home/gen/esp/esp-idf/components/esp_driver_dac/include -I/home/gen/esp/esp-idf/components/esp_driver_rmt/include -I/home/gen/esp/esp-idf/components/esp_driver_tsens/include -I/home/gen/esp/esp-idf/components/esp_driver_sdm/include -I/home/gen/esp/esp-idf/components/esp_driver_i2c/include -I/home/gen/esp/esp-idf/components/esp_driver_uart/include -I/home/gen/esp/esp-idf/components/vfs/include -I/home/gen/esp/esp-idf/components/esp_driver_ledc/include -I/home/gen/esp/esp-idf/components/esp_driver_parlio/include -I/home/gen/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/gen/esp/esp-idf/components/esp_driver_twai/include -I/home/gen/Projects/rover/managed_components/espressif__esp_jpeg/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=/home/gen/Projects/rover=. -fmacro-prefix-map=/home/gen/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/gen/Projects/rover/main/main.c
/home/gen/Projects/rover/main/main.c: In function 'stream_handler':
/home/gen/Projects/rover/main/main.c:53:28: error: 'STREAM_CONTENT_TYPE' undeclared (first use in this function)
   53 |   httpd_resp_set_type(req, STREAM_CONTENT_TYPE);
      |                            ^~~~~~~~~~~~~~~~~~~
/home/gen/Projects/rover/main/main.c:53:28: note: each undeclared identifier is reported only once for each function it appears in
/home/gen/Projects/rover/main/main.c:61:53: error: 'STREAM_PART' undeclared (first use in this function)
   61 |     int hlen = snprintf(part_buf, sizeof(part_buf), STREAM_PART, fb->len);
      |                                                     ^~~~~~~~~~~
/home/gen/Projects/rover/main/main.c:62:36: error: 'STREAM_BOUNDARY' undeclared (first use in this function)
   62 |     if (httpd_resp_send_chunk(req, STREAM_BOUNDARY, strlen(STREAM_BOUNDARY)) !=
      |                                    ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
